--- a/udp-client/Cargo.toml
+++ b/udp-client/Cargo.toml
@@ -12,8 +12,8 @@ edition = { workspace = true }
 [dependencies]
 async-trait = { workspace = true }
 solana-connection-cache = { workspace = true }
+solana-keypair = { workspace = true }
 solana-net-utils = { workspace = true }
-solana-signer = { workspace = true, features = ["keypair"] }
 solana-streamer = { workspace = true }
 solana-transaction-error = { workspace = true }
 thiserror = { workspace = true }
