--- a/program-runtime/Cargo.toml
+++ b/program-runtime/Cargo.toml
@@ -37,7 +37,7 @@ solana-instruction = { workspace = true }
 solana-last-restart-slot = { workspace = true }
 solana-log-collector = { workspace = true }
 solana-measure = { workspace = true }
-solana-metrics = { workspace = true }
+solana-metrics = { workspace = true, optional = true }
 solana-precompiles = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-rent = { workspace = true }
@@ -74,6 +74,7 @@ frozen-abi = [
     "dep:solana-frozen-abi-macro",
     "solana-compute-budget/frozen-abi",
 ]
+metrics = ["dep:solana-metrics"]
 shuttle-test = [
     "solana-type-overrides/shuttle-test",
     "solana-sbpf/shuttle-test",
