--- a/sdk/secp256k1-instruction/Cargo.toml
+++ b/sdk/secp256k1-instruction/Cargo.toml
@@ -19,7 +19,7 @@ sha3 = { workspace = true }
 solana-feature-set = { workspace = true }
 solana-instruction = { workspace = true, features = ["std"] }
 solana-precompile-error = { workspace = true }
-solana-pubkey = { workspace = true, optional = true }
+solana-sdk-ids = { workspace = true, optional = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
@@ -29,10 +29,12 @@ solana-hash = { workspace = true }
 solana-logger = { workspace = true }
 solana-program = { path = "../program" }
 solana-sdk = { path = ".." }
-solana-secp256k1-instruction = { path = ".", features = ["dev-context-only-utils"] }
+solana-secp256k1-instruction = { path = ".", features = [
+    "dev-context-only-utils",
+] }
 
 [features]
-bincode = ["dep:bincode", "dep:solana-pubkey", "serde"]
+bincode = ["dep:bincode", "dep:solana-sdk-ids", "serde"]
 dev-context-only-utils = ["bincode"]
 serde = ["dep:serde", "dep:serde_derive"]
 
