--- a/sdk/ed25519-instructions/Cargo.toml
+++ b/sdk/ed25519-instructions/Cargo.toml
@@ -22,8 +22,10 @@ solana-sdk-ids = { workspace = true }
 hex = { workspace = true }
 rand0-7 = { workspace = true }
 solana-hash = { workspace = true }
+solana-keypair = { workspace = true }
 solana-logger = { workspace = true }
 solana-sdk = { path = ".." }
+solana-signer = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
