--- a/remote-wallet/Cargo.toml
+++ b/remote-wallet/Cargo.toml
@@ -20,7 +20,10 @@ parking_lot = { workspace = true }
 qstring = { workspace = true }
 semver = { workspace = true }
 solana-derivation-path = { workspace = true }
-solana-sdk = { workspace = true }
+solana-offchain-message = { workspace = true }
+solana-pubkey = { workspace = true, features = ["std"] }
+solana-signature = { workspace = true, features = ["std"] }
+solana-signer = { workspace = true }
 thiserror = { workspace = true }
 uriparse = { workspace = true }
 
