missing dev dep

--- a/remote-wallet/Cargo.toml
+++ b/remote-wallet/Cargo.toml
@@ -29,6 +29,7 @@ uriparse = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
+solana-pubkey = { workspace = true, features = ["rand"] }
 
 [features]
 default = ["linux-static-hidraw", "hidapi"]
