--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -75,7 +75,8 @@ frozen-abi = [
     "solana-reward-info/frozen-abi",
     "solana-short-vec/frozen-abi",
     "solana-signature/frozen-abi",
-    "solana-transaction-error/frozen-abi",
+    "solana-transaction/frozen-abi",
+    "solana-transaction-error/frozen-abi"
 ]
 # Enables the "vendored" feature of openssl inside of secp256r1-program
 openssl-vendored = ["solana-precompiles/openssl-vendored"]
