--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -61,6 +61,7 @@ dev-context-only-utils = [
     "solana-account/dev-context-only-utils",
     "solana-compute-budget-interface/dev-context-only-utils",
     "solana-rent-debits/dev-context-only-utils",
+    "solana-transaction/dev-context-only-utils",
     "solana-transaction-context/dev-context-only-utils",
 ]
 frozen-abi = [
