--- a/metrics/Cargo.toml
+++ b/metrics/Cargo.toml
@@ -15,6 +15,7 @@ gethostname = { workspace = true }
 lazy_static = { workspace = true }
 log = { workspace = true }
 reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
+solana-clock = { workspace = true }
 solana-cluster-type = { workspace = true }
 solana-sha256-hasher = { workspace = true }
 solana-time-utils = { workspace = true }
