--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -28,7 +28,7 @@ full = [
     "rand0-7",
     "serde_json",
     "solana-signature",
-    "solana-transaction-context/debug_assertions",
+    "solana-transaction-context/debug_signature",
     "ed25519-dalek",
     "libsecp256k1",
     "sha3",
@@ -141,7 +141,7 @@ solana-signer = { workspace = true, optional = true }
 solana-time-utils = { workspace = true }
 solana-transaction-context = { workspace = true, features = [
     "bincode",
-    "debug_assertions",
+    "debug_signature",
 ] }
 solana-transaction-error = { workspace = true, features = ["serde"], optional = true }
 thiserror = { workspace = true }
