--- a/bench-tps/Cargo.toml
+++ b/bench-tps/Cargo.toml
@@ -39,7 +39,7 @@ solana-rpc-client-nonce-utils = { workspace = true }
 solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
 solana-sdk = { workspace = true }
 solana-streamer = { workspace = true }
-solana-tps-client = { workspace = true, features = ["bank-client"] }
+solana-tps-client = { workspace = true }
 solana-tpu-client = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
@@ -52,6 +52,7 @@ solana-feature-set = { workspace = true }
 solana-local-cluster = { workspace = true }
 solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
 solana-test-validator = { workspace = true }
+solana-tps-client = { workspace = true, features = ["bank-client"] }
 tempfile = { workspace = true }
 
 [package.metadata.docs.rs]
