--- a/sdk/address-lookup-table-interface/Cargo.toml
+++ b/sdk/address-lookup-table-interface/Cargo.toml
@@ -21,7 +21,7 @@ solana-frozen-abi = { workspace = true, features = [
 solana-frozen-abi-macro = { workspace = true, features = [
     "frozen-abi",
 ], optional = true }
-solana-instruction = { workspace = true, features = ["std"] }
+solana-instruction = { workspace = true, features = ["std"], optional = true }
 solana-pubkey = { workspace = true }
 solana-sdk-ids = { workspace = true }
 solana-slot-hashes = { workspace = true }
@@ -36,7 +36,12 @@ solana-address-lookup-table-interface = { path = ".", features = [
 solana-hash = { workspace = true }
 
 [features]
-bincode = ["dep:bincode", "serde", "solana-instruction/bincode"]
+bincode = [
+    "dep:bincode",
+    "dep:solana-instruction",
+    "serde",
+    "solana-instruction/bincode",
+]
 bytemuck = ["dep:bytemuck", "solana-pubkey/bytemuck"]
 dev-context-only-utils = ["bincode", "bytemuck"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "serde"]
