--- a/transaction-status/Cargo.toml
+++ b/transaction-status/Cargo.toml
@@ -24,6 +24,7 @@ solana-account-decoder = { workspace = true }
 solana-clock = { workspace = true }
 solana-hash = { workspace = true }
 solana-instruction = { workspace = true }
+solana-loader-instruction = { workspace = true, features = ["bincode"] }
 solana-message = { workspace = true }
 solana-program = { workspace = true }
 solana-pubkey = { workspace = true }
