--- a/sdk/big-mod-exp/Cargo.toml
+++ b/sdk/big-mod-exp/Cargo.toml
@@ -23,7 +23,7 @@ serde_derive = { workspace = true }
 serde_json = { workspace = true }
 
 [package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
+targets = ["x86_64-unknown-linux-gnu"]
 
 [lints]
 workspace = true
