--- a/Cargo.toml
+++ b/Cargo.toml
@@ -188,6 +188,7 @@ members = [
     "sdk/slot-hashes",
     "sdk/slot-history",
     "sdk/stable-layout",
+    "sdk/stake-interface",
     "sdk/system-transaction",
     "sdk/sysvar",
     "sdk/sysvar-id",
@@ -594,6 +595,7 @@ solana-short-vec = { path = "sdk/short-vec", version = "=2.2.0" }
 solana-shred-version = { path = "sdk/shred-version", version = "=2.2.0" }
 solana-stable-layout = { path = "sdk/stable-layout", version = "=2.2.0" }
 solana-stake-program = { path = "programs/stake", version = "=2.2.0", default-features = false }
+solana-stake-interface = { path = "sdk/stake-interface", version = "=2.2.0" }
 solana-storage-bigtable = { path = "storage-bigtable", version = "=2.2.0" }
 solana-storage-proto = { path = "storage-proto", version = "=2.2.0" }
 solana-streamer = { path = "streamer", version = "=2.2.0" }
