--- a/sdk/stake-interface/Cargo.toml
+++ b/sdk/stake-interface/Cargo.toml
@@ -16,30 +16,30 @@ crate-type = ["rlib"]
 program-id = "Stake11111111111111111111111111111111111111"
 
 [dependencies]
-borsh = { version = "1.5.1", features = ["derive", "unstable__schema"], optional = true }
-borsh0-10 = { package = "borsh", version = "0.10.3", optional = true }
-num-traits = "0.2"
-serde = { version = "1.0.210", optional = true }
-serde_derive = { version = "1.0.210", optional = true }
-solana-decode-error = "^2.1"
-solana-clock = "^2.1"
-solana-cpi = { version = "^2.1", optional = true }
-solana-frozen-abi = { version = "^2.1", features = ["frozen-abi"], optional = true }
-solana-frozen-abi-macro = { version = "^2.1", features = ["frozen-abi"], optional = true }
-solana-instruction = "^2.1"
-solana-program-error = { version = "^2.1", optional = true }
-solana-pubkey = { version = "^2.1", default-features = false }
-solana-system-interface = "^1.0"
-solana-sysvar-id = "2.1"
+borsh = { workspace = true, optional = true }
+borsh0-10 = { workspace = true, optional = true }
+num-traits = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_derive = { workspace = true, optional = true }
+solana-decode-error = { workspace = true }
+solana-clock = { workspace = true }
+solana-cpi = { workspace = true, optional = true }
+solana-frozen-abi = { workspace = true, features = ["frozen-abi"], optional = true }
+solana-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
+solana-instruction = { workspace = true, features = ["std"] }
+solana-program-error = { workspace = true, optional = true }
+solana-pubkey = { workspace = true, default-features = false }
+solana-system-interface = { workspace = true }
+solana-sysvar-id = { workspace = true }
 
 [dev-dependencies]
-assert_matches = "1.5.0"
-bincode = "1.3.3"
-solana-borsh = "^2.1"
-solana-program = { version = "^2.1", default-features = false }
-static_assertions = "1.1.0"
-strum = "0.24"
-strum_macros = "0.24"
+assert_matches = { workspace = true }
+bincode = { workspace = true }
+solana-borsh = { workspace = true }
+solana-program = { workspace = true, default-features = false }
+static_assertions = { workspace = true }
+strum = { workspace = true }
+strum_macros = { workspace = true }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
