--- a/sdk/stake-interface/Cargo.toml
+++ b/sdk/stake-interface/Cargo.toml
@@ -27,7 +27,7 @@ solana-cpi = { workspace = true, optional = true }
 solana-frozen-abi = { workspace = true, features = ["frozen-abi"], optional = true }
 solana-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
 solana-instruction = { workspace = true, features = ["std"] }
-solana-program-error = { workspace = true, optional = true }
+solana-program-error = { workspace = true }
 solana-pubkey = { workspace = true, default-features = false }
 solana-system-interface = { workspace = true }
 solana-sysvar-id = { workspace = true }
@@ -49,7 +49,6 @@ rustdoc-args = ["--cfg=docsrs"]
 [features]
 bincode = [
     "dep:solana-cpi",
-    "dep:solana-program-error",
     "solana-instruction/bincode",
     "solana-instruction/serde",
     "solana-system-interface/bincode",
