--- a/sdk/program/Cargo.toml
+++ b/sdk/program/Cargo.toml
@@ -129,7 +129,8 @@ borsh = [
     "solana-hash/borsh",
     "solana-instruction/borsh",
     "solana-program-error/borsh",
-    "solana-pubkey/borsh"
+    "solana-pubkey/borsh",
+    "solana-stake-interface/borsh"
 ]
 dev-context-only-utils = []
 frozen-abi = [
