--- a/sdk/loader-v2-interface/Cargo.toml
+++ b/sdk/loader-v2-interface/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "solana-loader-instruction"
-description = "Solana non-upgradable BPF loader instructions."
-documentation = "https://docs.rs/solana-loader-instruction"
+name = "solana-loader-v2-interface"
+description = "Solana non-upgradable BPF loader v2 instructions."
+documentation = "https://docs.rs/solana-loader-v2-interface"
 version = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
