--- a/sdk/example-mocks/Cargo.toml
+++ b/sdk/example-mocks/Cargo.toml
@@ -12,23 +12,16 @@ edition = { workspace = true }
 [dependencies]
 serde = { workspace = true }
 serde_derive = { workspace = true }
-solana-account = { workspace = true }
+solana-address-lookup-table-interface = { workspace = true }
 solana-clock = { workspace = true }
-solana-commitment-config = { workspace = true }
-solana-epoch-info = { workspace = true }
 solana-hash = { workspace = true }
 solana-instruction = { workspace = true }
 solana-keccak-hasher = { workspace = true }
-solana-keypair = { workspace = true }
-solana-message = { workspace = true }
+solana-message = { workspace = true, features = ["serde"] }
 solana-nonce = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-sdk-ids = { workspace = true }
-solana-signature = { workspace = true }
-solana-signer = { workspace = true }
 solana-system-interface = { workspace = true }
-solana-transaction = { workspace = true, features = ["bincode"] }
-solana-transaction-error = { workspace = true }
 thiserror = { workspace = true }
 
 [package.metadata.docs.rs]
