--- a/genesis/Cargo.toml
+++ b/genesis/Cargo.toml
@@ -34,6 +34,7 @@ tempfile = { workspace = true }
 
 [dev-dependencies]
 solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
+solana-stake-interface = { workspace = true, features = ["borsh"] }
 
 [[bin]]
 name = "solana-genesis"
