--- a/Cargo.toml
+++ b/Cargo.toml
@@ -742,6 +742,8 @@ solana-account-info = { path = "sdk/account-info" }
 solana-borsh = { path = "sdk/borsh" }
 solana-cpi = { path = "sdk/cpi" }
 solana-decode-error = { path = "sdk/decode-error" }
+solana-frozen-abi = { path = "sdk/frozen-abi" }
+solana-frozen-abi-macro = { path = "sdk/frozen-abi/macro" }
 solana-hash = { path = "sdk/hash" }
 solana-instruction = { path = "sdk/instruction" }
 solana-msg = { path = "sdk/msg" }
