--- a/programs/stake/Cargo.toml
+++ b/programs/stake/Cargo.toml
@@ -17,6 +17,7 @@ solana-bincode = { workspace = true }
 solana-clock = { workspace = true }
 solana-config-program = { workspace = true }
 solana-feature-set = { workspace = true }
+solana-genesis-config = { workspace = true }
 solana-instruction = { workspace = true }
 solana-log-collector = { workspace = true }
 solana-native-token = { workspace = true }
@@ -25,8 +26,8 @@ solana-program = { workspace = true }
 solana-program-runtime = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-rent = { workspace = true }
-solana-sdk = { workspace = true }
 solana-sdk-ids = { workspace = true }
+solana-stake-interface = { workspace = true }
 solana-sysvar = { workspace = true }
 solana-transaction-context = { workspace = true }
 solana-type-overrides = { workspace = true }
