--- a/compute-budget-instruction/Cargo.toml
+++ b/compute-budget-instruction/Cargo.toml
@@ -14,7 +14,7 @@ log = { workspace = true }
 solana-borsh = { workspace = true }
 solana-builtins-default-costs = { workspace = true, features = ["svm-internal"] }
 solana-compute-budget = { workspace = true }
-solana-compute-budget-interface = { workspace = true }
+solana-compute-budget-interface = { workspace = true, features = ["borsh"] }
 solana-feature-set = { workspace = true }
 solana-instruction = { workspace = true }
 solana-packet = { workspace = true }
