--- a/programs/stake/Cargo.toml
+++ b/programs/stake/Cargo.toml
@@ -40,6 +40,7 @@ solana-compute-budget = { workspace = true }
 solana-epoch-rewards = { workspace = true }
 solana-epoch-schedule = { workspace = true }
 solana-logger = { workspace = true }
+solana-pubkey = { workspace = true, features = ["rand"] }
 solana-sysvar-id = { workspace = true }
 solana-vote-program = { workspace = true, default-features = false }
 test-case = { workspace = true }
