--- a/programs/stake/Cargo.toml
+++ b/programs/stake/Cargo.toml
@@ -23,14 +23,14 @@ solana-log-collector = { workspace = true }
 solana-native-token = { workspace = true }
 solana-packet = { workspace = true }
 solana-program-runtime = { workspace = true }
-solana-pubkey = { workspace = true }
+solana-pubkey = { workspace = true, features = ["sha2"] }
 solana-rent = { workspace = true }
 solana-sdk-ids = { workspace = true }
 solana-stake-interface = { workspace = true }
 solana-sysvar = { workspace = true }
-solana-transaction-context = { workspace = true }
+solana-transaction-context = { workspace = true, features = ["bincode"] }
 solana-type-overrides = { workspace = true }
-solana-vote-interface = { workspace = true }
+solana-vote-interface = { workspace = true, features = ["bincode"] }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
