--- a/rpc-client-api-core/Cargo.toml
+++ b/rpc-client-api-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "solana-rpc-client-api-core"
-description = "Solana Client Common Utilities"
+description = "Solana RPC Client Core Types"
 documentation = "https://docs.rs/solana-rpc-client-api-core"
 version = { workspace = true }
 authors = { workspace = true }
